cleaned up API documentation, started on Hubs API endpoints
